--- a/src/app/templates/shell/header/header.component.scss
+++ b/src/app/templates/shell/header/header.component.scss
@@ -6,7 +6,7 @@ header {
   font-family: "Trash", sans-serif;
   position: fixed;
   width: 100%;
-  z-index: 9998;
+  z-index: 9900;
 }
 
 header .grid {
